unifi-controller-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-web
spec:
  selector:
    name: unifi-controller
  ports:
    - name: "tcp8443"
      protocol: TCP
      port: 443
      targetPort: 8443
